--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
 	<meta charset="utf-8" />
@@ -8,16 +8,11 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
+<body data-sveltekit-preload-data="hover" data-theme="vintage">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
 </html>
 
 
-<style>
-	body {
-		background-color: rgb(82, 82, 82);
-		/* Replace with your desired color */
-	}
-</style>
+<style></style>
